[package]
name = "rarathon"
version = "0.0.1"
authors = [ "Dan Everton <dan@iocaine.org>" ]

[[bin]]
name = "rarathon"

[dependencies]
getopts = "*"
rustc-serialize = "*"

[dependencies.hyper]
git = "https://github.com/hyperium/hyper.git"

[dependencies.url]
git = "https://github.com/servo/rust-url"

