[package]
name = "rarathon"
version = "0.0.2"
description = "Client library and command utility to interact with Mesosphere Marathon."
readme = "README.md"
license = "MIT"
repository = "https://github.com/deverton/rarathon"
authors = [ "Dan Everton <dan@iocaine.org>" ]
keywords = [ "marathon", "mesosphere", "rarathon" ]

[lib]
name = "rarathon"

[[bin]]
name = "marathon_client"
test = false
doc = false

[dependencies]
getopts = "*"
hyper = "*"
rustc-serialize = "*"
url = "*"

